# lanac_server

./: .gitignore  CMakeLists.txt  Dockerfile.client  Dockerfile.files  Dockerfile.server  Dockerfile.webapi  README.md  docker-compose.yml
client/: CMakeLists.txt  client.cc  client.h  file_picker.cc  file_picker.h  file_picker_cmd.cc  file_picker_cmd.h  file_picker_gui.cc  file_picker_gui.h  file_picker_interface.h  main_client.cc  network_utils.cc  network_utils.h
include/: global.h
server/: CMakeLists.MacOs.txt  CMakeLists.txt  database_interface.h  file_repository_interface.h  local_file_repository.cc  local_file_repository.h  main_server.cc  mysql_database.cc  mysql_database.h  picture_processing_interface.h  picture_rotation_90_left.cc  picture_rotation_90_left.h  picture_rotation_90_right.cc  picture_rotation_90_right.h  server.cc  server.h
sql/: mysql_lanaccess.sql
web_api/: .env  .gitignore
web_api/app/Http/Controllers/: PictureController.php
web_api/app/Models/: PictureModel.php
web_api/resources/views/: index.blade.php
web_api/routes/: web.php
